HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeDiagnostics/Source/Main.uv
//! Rejected FFI specimen for the FfiSafe diagnostics table.

extern "C" {
    public procedure importedBool(value: bool) -> i32
}
